WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109924
[EFL] Fix build when CONTEXT_MENUS flag is turned off
https://bugs.webkit.org/show_bug.cgi?id=109924
Summary
[EFL] Fix build when CONTEXT_MENUS flag is turned off
Michal Pakula vel Rutka
Reported
2013-02-15 04:36:48 PST
Currently WebKit1 does not build when CONTEXT_MENUS flag is turned off, this patch fixes it.
Attachments
patch
(3.90 KB, patch)
2013-02-15 05:08 PST
,
Michal Pakula vel Rutka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michal Pakula vel Rutka
Comment 1
2013-02-15 05:08:41 PST
Created
attachment 188542
[details]
patch
Build Bot
Comment 2
2013-02-15 06:49:53 PST
Comment on
attachment 188542
[details]
patch
Attachment 188542
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16588145
New failing tests: media/video-controls-captions-trackmenu.html
Michal Pakula vel Rutka
Comment 3
2013-02-18 04:20:27 PST
This patch introduces change only in WebKit/EFL code, so it cannot make MAC test fail.
Gyuyoung Kim
Comment 4
2013-02-18 04:23:48 PST
Comment on
attachment 188542
[details]
patch r=me
WebKit Review Bot
Comment 5
2013-02-18 05:22:18 PST
Comment on
attachment 188542
[details]
patch Clearing flags on attachment: 188542 Committed
r143200
: <
http://trac.webkit.org/changeset/143200
>
WebKit Review Bot
Comment 6
2013-02-18 05:22:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug