[EFL] Fix build when CONTEXT_MENUS flag is turned off https://bugs.webkit.org/show_bug.cgi?id=109924

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2013-02-18
Reviewed by Gyuyoung Kim.

* WebCoreSupport/ContextMenuClientEfl.cpp:
* WebCoreSupport/ContextMenuClientEfl.h:
* ewk/ewk_view.cpp:
(_Ewk_View_Private_Data):
(_ewk_view_priv_new):
(_ewk_view_priv_del):
(ewk_view_context_menu_get):

Canonical link: https://commits.webkit.org/128398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143200 268f45cc-cd09-0410-ab3c-d52691b4dbfc